--- a/src/companyback_tech.html
+++ b/src/companyback_tech.html
@@ -56,7 +56,7 @@
 
             <form action="#" class="companyback_form ">
                 <!-- icon -->
-                <aside class="companyback_layout blue">2</aside>
+                <aside class="companyback_layout">2</aside>
                 <ol class="companyback_icon">
                     <li><a><i class="fa-regular fa-pen-to-square"></i></a></li>
                     <li> <a><i class="fa-regular fa-trash-can"></i></a></li>
@@ -75,7 +75,7 @@
             </form>
             <form action="#" class="companyback_form ">
                 <!-- icon -->
-                <aside class="companyback_layout orange">3</aside>
+                <aside class="companyback_layout">3</aside>
                 <ol class="companyback_icon">
                     <li><a><i class="fa-regular fa-pen-to-square"></i></a></li>
                     <li class="trash-can"> <a><i class="fa-regular fa-trash-can"></i></a></li>
