--- a/src/about.html
+++ b/src/about.html
@@ -17,7 +17,7 @@
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <!-- aos -->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
   <!-- EmailJS -->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
   <script type="text/javascript">
@@ -27,6 +27,9 @@
   </script>
   <!-- is.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/is_js/0.9.0/is.min.js"></script>
+    <!-- vue -->
+  <script src="js/vue.min.js"></script>
+  
 
   <title>聚策展-展會介紹</title>
 </head>
@@ -41,7 +44,7 @@
     @@include('layout/login.html')
   </header>
   <!-- content，各自頁面的html寫在這邊以下都是範例 大區塊外面包section  -->
-  <main class="about_main">
+  <main class="about_main" id="about_main">
     <section class="about_banner">
       <img src="img/about/about_banner.png">
       <div class="about_slogan pd-10">
@@ -60,23 +63,23 @@
         <!-- <h2 class="about_date">04.01 - 06.30</h2> -->
       </div>
     </section>
-    <section class="wrapper about_brief wrapper_about" data-aos="fade-up" data-aos-duration="2000">
+    <section class="wrapper about_brief wrapper_about" > <!--data-aos="fade-up" data-aos-duration="2000"-->
       <div class="mb-10 about_title">會議簡介</div>
       <h3>疫情翻轉新常態．加速智慧轉型~~~~<br>
         新冠肺炎疫情自2020年爆發以來，徹底翻轉人類生活、工作與娛樂型態。遠距、零接觸成為「新常態」，促使國家、企業乃至個人，都要展開「智慧轉型」，以迎向後疫情時代，並緊緊握住復甦商機。在疫情期間展現優異的經濟韌性。疫情過後，全球更應該積極推動經濟轉型，邁入新形態市場，要強化數位轉型，更要提升民眾數位化能力。
       </h3>
     </section>
-    <section class="about_agenda " data-aos="fade-up" data-aos-duration="2000">
+    <section class="about_agenda "> <!--data-aos="fade-up" data-aos-duration="2000"-->
       <!-- <img src="img/about/abou_middleimg.png"> -->
       <div class="about_schedule wrapper wrapper_about">
         <div class="about_scheduleText">
           <div class="mb-10 about_title">大會議程</div>
           <ul>
-            <li>
-              <h3 class="about_time">10:20-10:30</h3>
-              <h3 class="about_theme">主持人介紹</h3>
+            <li v-for="schedule in schedules">
+              <h3 class="about_time">{{schedule.time}}</h3>
+              <h3 class="about_theme">{{schedule.theme}}</h3>
             </li>
-            <li>
+            <!-- <li>
               <h3 class="about_time">10:30-11:00</h3>
               <h3 class="about_theme">主講人:唐鳳-數位國家・創新經濟發展方案</h3>
             </li>
@@ -103,12 +106,12 @@
             <li>
               <h3 class="about_time">15:00-16:00</h3>
               <h3 class="about_theme">廠商名-技術分享</h3>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
     </section>
-    <section class="wrapper about_lecturer wrapper_about" data-aos="fade-up" data-aos-duration="2000">
+    <section class="wrapper about_lecturer wrapper_about"> <!--data-aos="fade-up" data-aos-duration="2000"-->
       <div class="mb-10 about_title">講師介紹</div>
       <div class="about_speakers">
         <div class="about_speaker mt-20">
