--- a/src/extend.html
+++ b/src/extend.html
@@ -115,8 +115,8 @@
           </section>
         </div>
       </section>
-        <!-- <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div> -->
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
     </section>
   </main>
   <!-- footer -->
