--- a/src/index.html
+++ b/src/index.html
@@ -126,6 +126,7 @@
             <div class="index_title">
                 <h1 class="main-color" data-spotlight="Tián lám 2022 智慧全球科技聚策展！">
                     Tián lám 2022 智慧全球科技聚策展
+                    <!-- Tián lám聚策展-2022智慧全球科技 -->
                 </h1>
             </div>
 
