--- a/src/live.html
+++ b/src/live.html
@@ -45,13 +45,15 @@
       <div class="live-container">
         <!-- 影片區 -->
         <!-- https://www.youtube.com/embed/gfwWsWJhoig?modestbranding=1&autoplay=1&playlist=gfwWsWJhoig -->
+        
+        <!-- src="https://www.youtube.com/embed/at6SJkmogvQ?modestbranding=1&autoplay=1&playlist=at6SJkmogvQ" -->
         <div class="live-video-container">
           <h2>
             抱歉，目前無直播<br />下一次直播時間 : <br />
             <span>{{NEXT_TIME}}</span>
           </h2>
-          <iframe  width="900" height="500"
-            src="https://www.youtube.com/embed/at6SJkmogvQ?modestbranding=1&autoplay=1&playlist=at6SJkmogvQ"
+          <iframe  v-if="C_NAME != ''"  width="900" height="500"
+            :src="['https://www.youtube.com/embed/' + LINK.split('=')[1] + '?autoplay=0&mute=1&playlist='+ LINK.split('=')[1] ]"
             title="video" frameborder="0" class="live-video"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen>
